Changes between 0.8.6f and 0.8.6g:
----------------------------------

Security updates:
 * Removed VLC variable settings from Mozilla and ActiveX (CVE-2007-6683)
 * Removed loading plugins from the current directory (no assigned CVE)

Various bugfixes:
 * Fixed various memory leaks, improving stability when running as a server
 * Fix compilation with recent versions of FFmpeg
 * Correctly parses SAP announcements from MPEG-TS
 * Fix AAC resampling


Changes between 0.8.6e and 0.8.6f:
----------------------------------

Security updates:
 * Really fixed subtitle buffer overflow (CVE-2007-6681, CVE-2008-1881)
 * Fixed Real RTSP code execution problem (CVE-2008-0073)
 * Fixed MP4 integer overflows (CVE-2008-1489, CVE-2008-1768)
 * Fixed cinepak vulnerabilities (CVE-2008-1769)
 - More information can be found in VideoLAN-SA-0801 and VideoLAN-SA-0803.

Various bugfixes:
 * The Mozilla plugin registers a usable range of MIME-types on Mac OS X
 * Improved VLC's video output behavior on multi-screen setups running Mac OS X
 * Fixed crashes in H264 packetizer
 * Close MMS access on network timeout
 * Fix some problems with AAC decoder & packetizer


Changes between 0.8.6d and 0.8.6e:
----------------------------------

Various bugfixes:
 * Resume playback for viewing content over FTP
 * Fixed XShm detection with remote X11

Security updates:
 * Subtitle demuxers overflow (CVE-2007-6681)
 * HTTP listener format string injection (CVE-2007-6682)
 * Fixed buffer overflow in the SDL_image library (CVE-2006-4484)
 * Real RTSP overflows (CVE-2008-0225, CVE-2008-0295, CVE-2008-0296, VideoLAN-SA-0801)
 * Arbitrary memory overwrite in the MP4 demuxer (CORE-2008-0130, VideoLAN-SA-0802)

Audio filter:
 * Fixed DTS to S/PDIF converter

Audio output:
 * Fixed 5.1 audio on ALSA

Access:
 * Fixed some RTSP hanging and user/password passing through RTSP URLs

Stream output:
 * Fixed waiting for SPS/PPS problem in H.264 packetizer

Encoders: