@@ -7,9 +7,11 @@ Security updates:
 
 Various bugfixes:
  * Fixed various memory leaks, improving stability when running as a server
- * Fix compilation with recent versions of FFmpeg
+ * Fixed compilation with recent versions of FFmpeg
  * Correctly parses SAP announcements from MPEG-TS
- * Fix AAC resampling
+ * Fixed AAC resampling
+ * The Fullscreen Controller appears correctly on Mac OS X, 
+   if the 'Always-on-top' video option was selected.
 
 
 Changes between 0.8.6e and 0.8.6f:
